tests/paczka1/fuzzy1/58442701.err
Error in line 1: jM8hkDdx S897 36,7
Error in line 8: jM8hkDdx S674 98,5
Error in line 16: 8NTGZMQ S674 97,8
Error in line 17: jM8hkDdx S897 47,3
Error in line 29: E8ALVxPsk A1 77,4
